# job_search_17

./: .coverage  .gitignore  README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_api_interactions_py.html  z_145eef247bfb46b6_filehandler_py.html  z_145eef247bfb46b6_vacancies_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_filehandler_py.html  z_a44f0ac069e85531_test_interactions_py.html  z_a44f0ac069e85531_test_vacancies_py.html
src/: api_interactions.py  filehandler.py  main.py  vacancies.json  vacancies.py
tests/: test_filehandler.py  test_interactions.py  test_vacancies.py
