[tool.poetry]
name = "job-search-17"
version = "0.1.0"
description = ""
authors = ["BaikNadia <baikowa.nadia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
requests = "^2.32.3"
pytest = "^8.4.0"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
mypy = "^1.16.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py
)
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'
